# BinOculars

./: .gitmodules  Column.h  DatabaseStructureModel.cpp  DatabaseStructureModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReadMe.rst  main.cpp  sqlite.pro
src/: CMakeLists.txt  Column.cpp  CommandHistory.cpp  CommandHistory.h  DataBase.cpp  DataBase.h  DatabaseSelector.cpp  DatabaseSelector.h  DatabaseStructureModel.cpp  DatabaseStructureModel.h  Field.cpp  GlobalEventFilter.cpp  GlobalEventFilter.h  Log.cpp  LogDelegate.cpp  LogDelegate.h  LogFilter.h  LogModel.cpp  LogModel.h  LogModelFilter.cpp  LogModelFilter.h  LogView.cpp  LogView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QueryResultModel.cpp  QueryResultModel.h  QuickOpenDialog.cpp  QuickOpenDialog.h  RememberDialog.h  Settings.cpp  Settings.h  SqlConsole.cpp  SqlConsole.h  Table.cpp  Table.h  main.cpp  ms-windows-icon.rc
src/gui/: CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  DatabaseSelector.cpp  DatabaseSelector.h  DatabaseStructureModel.cpp  DatabaseStructureModel.h  FieldDialog.cpp  FieldDialog.h  FieldDialog.ui  LogDelegate.cpp  LogDelegate.h  LogView.cpp  LogView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QueryResultModel.cpp  QueryResultModel.h  QuickOpenDialog.cpp  QuickOpenDialog.h  QuickOpenDialog.ui  RememberDialog.cpp  RememberDialog.h  Settings.cpp  Settings.h  SqlConsole.cpp  SqlConsole.h  TableView.cpp  TableView.h  images.qrc
src/model/: CMakeLists.txt  DataBase.cpp  DataBase.h  Field.cpp  Field.h  Log.cpp  Log.h  LogFilter.cpp  LogFilter.h  Table.cpp  Table.h
tests/: CMakeLists.txt  DataBaseTest.cpp  DataBaseTest.h  FieldTest.cpp  FieldTest.h  LibModelTestSuite.cpp  LibModelTestSuite.h  TableTest.cpp  TableTest.h  TestDataBaseProvider.cpp  TestDataBaseProvider.h  main.cpp
tests/TestResources/: database-1  resources.qrc
